Format final changes for Dagoba.

--- a/tex/500L.tex
+++ b/tex/500L.tex
@@ -260,7 +260,15 @@
 \mainmatter
 
 
+\include{image-filters}
+
+\include{dagoba}
+
 \include{ocr}
+
+\include{contingent}
+
+\include{same-origin-policy}
 
 \include{blockcode}
 
