--- a/tex/cluster.tex
+++ b/tex/cluster.tex
@@ -1,5 +1,14 @@
 \begin{aosachapter}{Clustering by Consensus}{s:cluster}{Dustin J. Mitchell}
 
+\emph{Dustin is an open source software developer and release engineer
+at Mozilla. He has worked on projects as varied as a host configuration
+system in Puppet, a Flask-based web framework, unit tests for firewall
+configurations, and a continuous integration framework in Twisted
+Python. Find him as \href{http://github.com/djmitche}{@djmitche} on
+GitHub or at \href{mailto:dustin@mozilla.com}{dustin@mozilla.com}.}
+
+\aosasecti{Introduction}\label{introduction}
+
 In this chapter, we'll explore implementation of a network protocol
 designed to support reliable distributed computation. Network protocols
 can be difficult to implement correctly, so we'll look at some
