--- a/tex/ocr.tex
+++ b/tex/ocr.tex
@@ -111,12 +111,13 @@ of output a node has. A bias is an additional node with a fixed output
 of 1 that may be added to an ANN to improve its accuracy. We'll see more
 details on both of these in \aosasecref{sec.ocr.feedforward}.
 
-This type of network topology is called a feedforward neural network
-because there are no cycles in the network. ANNs with nodes whose
-outputs feed into their inputs are called recurrent neural networks.
-There are many algorithms that can be applied to train feedforward ANNs;
-one commonly used algorithm is called \emph{backpropagation}. The OCR
-system we will implement in this chapter will use backpropagation.
+This type of network topology is called a \emph{feedforward} neural
+network because there are no cycles in the network. ANNs with nodes
+whose outputs feed into their inputs are called recurrent neural
+networks. There are many algorithms that can be applied to train
+feedforward ANNs; one commonly used algorithm is called
+\emph{backpropagation}. The OCR system we will implement in this chapter
+will use backpropagation.
 
 \aosasectii{How Do We Use ANNs?}\label{how-do-we-use-anns}
 
