--- a/tex/ci.tex
+++ b/tex/ci.tex
@@ -1,5 +1,12 @@
 \begin{aosachapter}{A Continuous Integration System}{s:ci}{Malini Das}
 
+\emph{Malini Das is a software engineer who is passionate about
+developing quickly (but safely!), and solving cross-functional problems.
+She has worked at Mozilla as a tools engineer and is currently honing
+her skills at Twitch. Follow Malini on
+\href{https://twitter.com/malinidas}{Twitter} or on her
+\href{http://malinidas.com/}{blog}.}
+
 \aosasecti{What is a Continuous Integration
 System?}\label{what-is-a-continuous-integration-system}
 
@@ -178,7 +185,7 @@ commit it:
 $ cp -r /this/directory/tests /path/to/test_repo/ 
 $ cd /path/to/test\_repo 
 $ git add tests/ 
-$ git commit -m”add tests”
+$ git commit -m ”add tests”
 \end{verbatim}
 
 Now you have a commit in the master repository.
@@ -226,7 +233,7 @@ modified this assumption for simplicity.
 
 The observer must know which repository to observe. We previously
 created a clone of our repository at
-\texttt{/path/to/test\_repo\_clone\_obs}. The repository will use this
+\texttt{/path/to/test\_repo\_clone\_obs}. The observer will use this
 clone to detect changes. To allow the repository observer to use this
 clone, we pass it the path when we invoke the \texttt{repo\_observer.py}
 file. The repository observer will use this clone to pull from the main
