--- a/tex/flow-shop.tex
+++ b/tex/flow-shop.tex
@@ -1,4 +1,11 @@
-\begin{aosachapter}{A Flow Shop Scheduler}{s:flow-shop}{Christian Muise}
+\begin{aosachapter}{A Flow Shop Scheduler}{s:flow-shop}{Dr. Christian Muise}
+
+\emph{\href{http://haz.ca}{Dr.~Christian Muise} is a Research Fellow
+with the \href{http://groups.csail.mit.edu/mers/}{MERS group} at
+\href{http://www.csail.mit.edu/}{MIT's CSAIL}. He is interested in a
+variety of topics including AI, data-driven projects, mapping, graph
+theory, and data visualization, as well as celtic music, carving,
+soccer, and coffee.}
 
 \aosasecti{A Flow Shop Scheduler}\label{a-flow-shop-scheduler}
 
