--- a/tex/functionalDB.tex
+++ b/tex/functionalDB.tex
@@ -1,5 +1,16 @@
 \begin{aosachapter}{An Archaeology-Inspired Database}{s:functionalDB}{Yoav Rubin}
 
+\emph{Yoav Rubin is a Senior Software Engineer at Microsoft, and prior
+to that was a Research Staff Member and a Master Inventor at IBM
+Research. He works now in the domain of data security in the cloud, and
+in the past his work focused on developing cloud or web based
+development environments. Yoav holds an M.Sc. in Medical Research in the
+field of Neuroscience and B.Sc in Information Systems Engineering. He
+goes by \href{https://twitter.com/yoavrubin}{@yoavrubin} on Twitter, and
+occasionally blogs at \url{http://yoavrubin.blogspot.com}.}
+
+\aosasecti{Introduction}\label{introduction}
+
 Software development is often viewed as a rigorous process, where the
 inputs are requirements and the output is the working product. However,
 software developers are people, with their own perspectives and biases
@@ -8,8 +19,6 @@ which color the outcome of their work.
 In this chapter, we will explore how a change in a common perspective
 affects the design and implementation of a well-studied type of
 software: a database.
-
-\aosasecti{Introduction}\label{introduction}
 
 Database systems are designed to store and query data. This is something
 that all information workers do; however, the systems themselves were
@@ -431,10 +440,10 @@ Initializing our database means:
    (atom 
        (Database. [(Layer.
                    (fdb.storage.InMemory.) ; storage
-                   (make-index #(vector %3 %2 %1) #(vector %3 %2 %1) #(ref? %)); VAET                     
-                   (make-index #(vector %2 %3 %1) #(vector %3 %1 %2) always); AVET                        
-                   (make-index #(vector %3 %1 %2) #(vector %2 %3 %1) always); VEAT                       
-                   (make-index #(vector %1 %2 %3) #(vector %1 %2 %3) always); EAVT
+                   (make-index #(vector %3 %2 %1) #(vector %3 %2 %1) #(ref? %));VAET                     
+                   (make-index #(vector %2 %3 %1) #(vector %3 %1 %2) always);AVET                        
+                   (make-index #(vector %3 %1 %2) #(vector %2 %3 %1) always);VEAT                       
+                   (make-index #(vector %1 %2 %3) #(vector %1 %2 %3) always);EAVT
                   )] 0 0)))
 \end{verbatim}
 
@@ -633,13 +642,18 @@ Finally, we must update the indexes. This means, for each of the indexes
          all-attrs  (vals (:attrs ent))
          relevant-attrs (filter #((usage-pred index) %) all-attrs)
          add-in-index-fn (fn [ind attr] 
-                                 (update-attr-in-index ind ent-id (:name attr) (:value attr) :db/add))]
+                                 (update-attr-in-index ind ent-id (:name attr) 
+                                                                  (:value attr) 
+                                                                  :db/add))]
         (assoc layer ind-name  (reduce add-in-index-fn index relevant-attrs))))
 
 (defn- update-attr-in-index [index ent-id attr-name target-val operation]
    (let [colled-target-val (collify target-val)
-         update-entry-fn (fn [indx vl] 
-                                 (update-entry-in-index indx ((from-eav index) ent-id attr-name vl) operation))]
+         update-entry-fn (fn [ind vl] 
+                             (update-entry-in-index 
+                                ind 
+                                ((from-eav index) ent-id attr-name vl) 
+                                operation))]
      (reduce update-entry-fn index colled-target-val)))
      
 (defn- update-entry-in-index [index path operation]
@@ -745,14 +759,15 @@ layer which contains the updated entity.
 \begin{verbatim}
 (defn update-entity
    ([db ent-id attr-name new-val]
-    (update-entity db ent-id attr-name new-val :db/reset-to ))
+    (update-entity db ent-id attr-name new-val :db/reset-to))
    ([db ent-id attr-name new-val operation]
       (let [update-ts (next-ts db)
             layer (last (:layers db))
             attr (attr-at db ent-id attr-name)
             updated-attr (update-attr attr new-val update-ts operation)
-            fully-updated-layer (update-layer layer ent-id attr 
-                                                          updated-attr new-val operation)]
+            fully-updated-layer (update-layer layer ent-id 
+                                              attr updated-attr 
+                                              new-val operation)]
         (update-in db [:layers] conj fully-updated-layer))))
 \end{verbatim}
 
@@ -786,9 +801,12 @@ creation of the black arrows in Figure 1:
    (cond
       (single? attr)    (assoc attr :value #{value})
       ; now we're talking about an attribute of multiple values
-      (= :db/reset-to operation)  (assoc attr :value value)
-      (= :db/add operation) (assoc attr :value (CS/union (:value attr) value))
-      (= :db/remove operation) (assoc attr :value (CS/difference (:value attr) value))))
+      (= :db/reset-to operation) 
+        (assoc attr :value value)
+      (= :db/add operation) 
+        (assoc attr :value (CS/union (:value attr) value))
+      (= :db/remove operation)
+        (assoc attr :value (CS/difference (:value attr) value))))
 \end{verbatim}
 
 All that remains is to remove the old value from the indexes and add the
@@ -844,7 +862,9 @@ perform, and returns its updated value.
           (recur rst-ops (apply (first op) transacted (rest op)))
           (let [initial-layer  (:layers initial-db)
                 new-layer (last (:layers transacted))]
-            (assoc initial-db :layers (conj  initial-layer new-layer) :curr-time (next-ts initial-db) :top-id (:top-id transacted))))))
+            (assoc initial-db :layers (conj initial-layer new-layer) 
+                              :curr-time (next-ts initial-db) 
+                              :top-id (:top-id transacted))))))
 \end{verbatim}
 
 Note here that we used the term \emph{value}, meaning that only the
@@ -1020,7 +1040,9 @@ entity at that index:
 (defn incoming-refs [db ts ent-id & ref-names]
    (let [vaet (indx-at db :VAET ts)
          all-attr-map (vaet ent-id)
-         filtered-map (if ref-names (select-keys ref-names all-attr-map) all-attr-map)]
+         filtered-map (if ref-names 
+                          (select-keys ref-names all-attr-map) 
+                          all-attr-map)]
       (reduce into #{} (vals filtered-map))))
 \end{verbatim}
 
@@ -1065,7 +1087,7 @@ Datalog language from the
 \aosasectii{Query Language}\label{query-language}
 
 Let's look at an example query in our proposed language. This query
-asks: ``What are the names and birthday of entities who like pizza,
+asks: ``What are the names and birthdays of entities who like pizza,
 speak English, and who have a birthday this month?''
 
 \begin{verbatim}
@@ -1109,7 +1131,7 @@ how to structure the found values in the output (specified by the
 
 We fulfill both of these requirements using \emph{variables}, which are
 denoted with a leading \texttt{?}. The only exception to this definition
-is the ``don't care'' variable ``\_" (underscore).
+is the ``don't care'' variable \texttt{\_} (underscore).
 
 A clause in a query is composed of three predicates;
 \aosatblref{500l.functionaldb.predicates} defines what can act as a
@@ -1139,10 +1161,10 @@ Binary operator & \begin{tabular}{@{}l@{}} A binary operation that must have a v
 Language}\label{limitations-of-our-query-language}
 
 Engineering is all about managing tradeoffs, and designing our query
-engine is no different. In our case, the first tradeoff we must make is
-feature-richness versus complexity. Resolving this tradeoff requires us
-to look at common use-cases of the system, and from there deciding what
-limitations would be acceptable.
+engine is no different. In our case, the main tradeoff we must address
+is feature-richness versus complexity. Resolving this tradeoff requires
+us to look at common use-cases of the system, and from there deciding
+what limitations would be acceptable.
 
 In our database, we decided to build a query engine with the following
 limitations:
@@ -1170,8 +1192,8 @@ useful queries.
 
 While our query language allows the user to specify \emph{what} they
 want to access, it hides the details of \emph{how} this will be
-accomplished. The \texttt{query engine} is the database component
-responsible for yielding the data for a given query.
+accomplished. The query engine is the database component responsible for
+yielding the data for a given query.
 
 This involves four steps:
 
@@ -1214,11 +1236,16 @@ with a predicate according to \aosatblref{500l.functionaldb.predicates}.
 \begin{verbatim}
 (defmacro clause-term-expr [clause-term]
    (cond
-    (variable? (str clause-term)) #(= % %) ; variable
-    (not (coll? clause-term)) `#(= % ~clause-term) ; constant
-    (= 2 (count clause-term)) `#(~(first clause-term) %) ; unary operator
-    (variable? (str (second clause-term))) `#(~(first clause-term) % ~(last clause-term)) ; binary operator, first operand is a variable
-    (variable? (str (last clause-term))) `#(~(first clause-term) ~(second clause-term) %))) ; binary operator, second operand is variable
+    (variable? (str clause-term)) ;variable
+      #(= % %) 
+    (not (coll? clause-term)) ;constant 
+      `#(= % ~clause-term) 
+    (= 2 (count clause-term)) ;unary operator
+      `#(~(first clause-term) %) 
+    (variable? (str (second clause-term)));binary operator, 1st operand is variable
+      `#(~(first clause-term) % ~(last clause-term))
+    (variable? (str (last clause-term)));binary operator, 2nd operand is variable
+      `#(~(first clause-term) ~(second clause-term) %)))
 \end{verbatim}
 
 Also, for each clause, a vector with the names of the variables used in
@@ -1418,7 +1445,8 @@ some results:
    (let [result-clauses (filter-index index pred-clauses)
          relevant-items (items-that-answer-all-conditions (map last result-clauses) 
                                                           (count pred-clauses))
-         cleaned-result-clauses (map (partial mask-path-leaf-with-items relevant-items)
+         cleaned-result-clauses (map (partial mask-path-leaf-with-items 
+                                              relevant-items)
                                      result-clauses)] 
      (filter #(not-empty (last %)) cleaned-result-clauses)))
 \end{verbatim}
@@ -1493,7 +1521,7 @@ elements that passed all the predicate clauses:
    (->> items-seq ; take the items-seq
          (map vec) ; make each collection (actually a set) into a vector
          (reduce into []) ;reduce all the vectors into one vector
-         (frequencies) ; count for each item in how many collections (sets) it was in
+         (frequencies) ;count for each item in how many collections (sets) it was in
          (filter #(<= num-of-conditions (last %))) ;items that answered all conditions
          (map first) ; take from the duos the items themselves
          (set))) ; return it as set
@@ -1548,7 +1576,8 @@ entity-id / attr-name / value in an index:
 
 \begin{verbatim}
 (defn bind-variables-to-query [q-res index]
-   (let [seq-res-path (mapcat (partial combine-path-and-meta (from-eav index)) q-res)         
+   (let [seq-res-path (mapcat (partial combine-path-and-meta (from-eav index)) 
+                               q-res)         
          res-path (map #(->> %1 (partition 2)(apply (to-eav index))) seq-res-path)] 
      (reduce #(assoc-in %1  (butlast %2) (last %2)) {} res-path)))
      
@@ -1563,12 +1592,12 @@ At the end of phase 3 of our example execution, we have the following
 structure at hand:
 
 \begin{verbatim}
- {[1 "?e"] {
-        [:likes nil]    ["Pizza" nil]
-        [:name nil]     ["USA" "?nm"]
-        [:speaks nil]   ["English" nil] 
-        [:birthday nil] ["July 4, 1776" "?bd"]} 
-    }}
+{[1 "?e"]{ 
+    {[:likes nil]    ["Pizza" nil]}
+    {[:name nil]     ["USA" "?nm"]}
+    {[:speaks nil]   ["English" nil]} 
+    {[:birthday nil] ["July 4, 1776" "?bd"]} 
+}}
 \end{verbatim}
 
 \aosasectiii{Phase 4: Unify and
@@ -1619,11 +1648,11 @@ database and a query.
 \begin{verbatim}
 (defmacro q
   [db query]
-  `(let [pred-clauses#  (q-clauses-to-pred-clauses ~(:where query)) ; transforming the clauses of the query to an internal representation structure called query-clauses
-           needed-vars# (symbol-col-to-set  ~(:find query))  ; extracting from the query the variables that needs to be reported out as a set
-           query-plan# (build-query-plan pred-clauses#) ; extracting a query plan based on the query-clauses
-           query-internal-res# (query-plan# ~db)] ;executing the plan on the database
-     (unify query-internal-res# needed-vars#)));unifying the query result with the needed variables to report out what the user asked for
+  `(let [pred-clauses#  (q-clauses-to-pred-clauses ~(:where query)) 
+         needed-vars# (symbol-col-to-set  ~(:find query))
+         query-plan# (build-query-plan pred-clauses#)
+         query-internal-res# (query-plan# ~db)]
+     (unify query-internal-res# needed-vars#)))
 \end{verbatim}
 
 \aosasecti{Summary}\label{summary}
