--- a/tex/modeller.tex
+++ b/tex/modeller.tex
@@ -1,5 +1,11 @@
 \begin{aosachapter}{A 3D Modeller}{s:modeller}{Erick Dransch}
 
+\emph{Erick is a software developer and 2D and 3D computer graphics
+enthusiast. He has worked on video games, 3D special effects software,
+and computer aided design tools. If it involves simulating reality,
+chances are he'd like to learn more about it. You can find him online at
+\href{http://erickdransch.com}{erickdransch.com}.}
+
 \aosasecti{Introduction}\label{introduction}
 
 Humans are innately creative. We continuously design and build novel,
