--- a/tex/objmodel.tex
+++ b/tex/objmodel.tex
@@ -1,5 +1,12 @@
 \begin{aosachapter}{A Simple Object Model}{s:objmodel}{Carl Friedrich Bolz}
 
+\emph{Carl Friedrich Bolz is a researcher at King's College London and
+is broadly interested in the implementation and optimization of all
+kinds of dynamic languages. He is one of the core authors of
+PyPy/RPython and has worked on implementations of Prolog, Racket,
+Smalltalk, PHP and Ruby. He's \href{https://twitter.com/cfbolz}{@cfbolz}
+on Twitter.}
+
 \aosasecti{Introduction}\label{introduction}
 
 Object-oriented programming is one of the major programming paradigms in
@@ -721,10 +728,9 @@ def test_get():
 The \texttt{\_\_get\_\_} method is called on the
 \texttt{FahrenheitGetter} instance after that has been looked up in the
 class of \texttt{obj}. The arguments to \texttt{\_\_get\_\_} are the
-instance where the lookup was done{[}\^{}secondarg{]}.
-
-{[}\^{}secondarg{]} In Python the second argument is the class where the
-attribute was found, though we will ignore that here.
+instance where the lookup was done\footnote{In Python the second
+  argument is the class where the attribute was found, though we will
+  ignore that here.}.
 
 Implementing this behaviour is easy. We simply need to change
 \texttt{\_is\_bindable} and \texttt{\_make\_boundmethod}:
