--- a/tex/sampler.tex
+++ b/tex/sampler.tex
@@ -1,5 +1,11 @@
 \begin{aosachapter}{A Rejection Sampler}{s:sampler}{Jessica B. Hamrick}
 
+\emph{Jess is a Ph.D.~student at UC Berkeley where she studies human
+cognition by combining probabilistic models from machine learning with
+behavioral experiments from cognitive science. In her spare time, Jess
+is a core contributor to IPython and Jupyter. She also holds a B.S. and
+M.Eng. in Computer Science from MIT.}
+
 \aosasecti{Introduction}\label{introduction}
 
 Frequently, in computer science and engineering, we run into problems
@@ -462,7 +468,7 @@ Equation}\label{the-multinomial-pmf-equation}
 Formally, the multinomial distribution has the following equation:
 
 \[
-p(\mathbf{x}; \mathbf{p}) = \frac{(\sum_{i=1}^k x_i)!}{x_1!\cdots{}x_k!}p_1^{x_1}\cdots{}p_k^{x_k},
+p(\mathbf{x}; \mathbf{p}) = \frac{(\sum_{i=1}^k x_i)!}{x_1!\cdots{}x_k!}p_1^{x_1}\cdots{}p_k^{x_k}
 \]
 
 where $\mathbf{x}=[x_1, \ldots{}, x_k]$ is a vector of length $k$
@@ -478,7 +484,7 @@ the gamma function rather than factorial, so we will rewrite the
 equation using $\Gamma$:
 
 \[
-p(\mathbf{x}; \mathbf{p}) = \frac{\Gamma((\sum_{i=1}^k x_i)+1)}{\Gamma(x_1+1)\cdots{}\Gamma(x_k+1)}p_1^{x_1}\cdots{}p_k^{x_k},
+p(\mathbf{x}; \mathbf{p}) = \frac{\Gamma((\sum_{i=1}^k x_i)+1)}{\Gamma(x_1+1)\cdots{}\Gamma(x_k+1)}p_1^{x_1}\cdots{}p_k^{x_k}
 \]
 
 \aosasectiii{Working with Log Values}\label{working-with-log-values}
@@ -947,7 +953,7 @@ def _bonus_log_pmf(self, bonus):
     return self.bonus_dist.log_pmf(x)
 \end{verbatim}
 
-We can now create our distrbution as follows:
+We can now create our distribution as follows:
 
 \begin{verbatim}
 >>> import numpy as np
@@ -1193,7 +1199,7 @@ the general case:
   (e.g., using dictionaries as the output of
   \texttt{MagicItemDistribution.sample}) while still exposing the less
   clear but more efficient and purely numeric version of those functions
-  (e.g., \texttt{MagicItemDistribution.\_sample\_stats}).
+  \linebreak (e.g., \texttt{MagicItemDistribution.\_sample\_stats}).
 \end{aosaenumerate}
 
 Additionally, we've seen how sampling from a probability distribution
